# advent-of-code

./: .editorconfig
adventofcode_2021_rust/: Cargo.toml  README.md
adventofcode_2021_rust/src/: main.rs
adventofcode_2021_rust/src/day01/: mod.rs
adventofcode_2021_rust/src/day02/: mod.rs
adventofcode_2021_rust/src/day03/: mod.rs
adventofcode_2021_rust/src/day04/: mod.rs
adventofcode_2021_rust/src/day05/: mod.rs
adventofcode_2021_rust/src/day06/: mod.rs
adventofcode_2021_rust/src/day07/: mod.rs
adventofcode_2021_rust/src/day08/: mod.rs
adventofcode_2021_rust/src/day09/: mod.rs
adventofcode_2021_rust/src/day1/: mod.rs
adventofcode_2021_rust/src/day10/: mod.rs
adventofcode_2021_rust/src/day11/: mod.rs
adventofcode_2021_rust/src/day12/: mod.rs
adventofcode_2021_rust/src/day13/: mod.rs
adventofcode_2021_rust/src/day14/: mod.rs
adventofcode_2021_rust/src/day17/: mod.rs
adventofcode_2021_rust/src/day18/: mod.rs
adventofcode_2021_rust/src/day2/: mod.rs
adventofcode_2021_rust/src/day22/: mod.rs
adventofcode_2021_rust/src/day24/: mod.rs
adventofcode_2021_rust/src/day25/: mod.rs
adventofcode_2021_rust/src/day3/: mod.rs
adventofcode_2021_rust/src/day7/: mod.rs
adventofcode_2021_rust/src/day8/: mod.rs
adventofcode_2021_rust/src/day9/: mod.rs
adventofcode_2023_rust/: Cargo.toml  README.md
adventofcode_2023_rust/src/: main.rs
adventofcode_2023_rust/src/day01/: mod.rs
adventofcode_2023_rust/src/day02/: mod.rs
adventofcode_2023_rust/src/day03/: mod.rs
adventofcode_2023_rust/src/day04/: mod.rs
adventofcode_2023_rust/src/day05/: mod.rs
adventofcode_2023_rust/src/day06/: mod.rs
adventofcode_2023_rust/src/day07/: mod.rs
adventofcode_2023_rust/src/day08/: mod.rs
adventofcode_2023_rust/src/day09/: mod.rs
adventofcode_2023_rust/src/day1/: mod.rs
adventofcode_2023_rust/src/day10/: mod.rs
adventofcode_2023_rust/src/day11/: mod.rs
adventofcode_2023_rust/src/day12/: mod.rs
adventofcode_2023_rust/src/day13/: mod.rs
adventofcode_2023_rust/src/day14/: mod.rs
adventofcode_2023_rust/src/day15/: mod.rs
adventofcode_2023_rust/src/day16/: mod.rs
adventofcode_2024_rust/: Cargo.toml  README.md
adventofcode_2024_rust/src/: lib.rs  main.rs
adventofcode_2025_rust/: Cargo.toml  README.md
adventofcode_2025_rust/benches/: day01.rs
adventofcode_2025_rust/src/: lib.rs  main.rs
(+59 files in other folders)
