[package]
name = "adventofcode_2021_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
day1 = []
day2 = []
day3 = []
day4 = []
day5 = []
day6 = []
day7 = []
day8 = []
day9 = []
day10 = []
day11 = []
day12 = []
day13 = []
day14 = []
day15 = []
day16 = []
day17 = []
day18 = []
day19 = []
day20 = []
day21 = []
day22 = []
day23 = []
day24 = []
day25 = []

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
