[package]
name = "adventofcode_2024_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
day01 = []
day02 = []
day03 = []
day04 = []
day05 = []
day06 = []
day07 = []
day08 = []
day09 = []
day10 = []
day11 = []
day12 = []
day13 = []
day14 = []
day15 = []
day16 = []
day17 = []
day18 = []
day19 = []
day20 = []
day21 = []
day22 = []
day23 = []
day24 = []
day25 = []

[dependencies]
console_engine = "2.6.1"
rayon = "1.10.0"
regex = "1.11.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "day01"
required-features = ["day01"]
harness = false
